<resources>
    <string name="app_name">ParentApp</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up_message">Create your account for free <b> now </b> and spy on your kid <b>today</b>!</string>
    <string name="nameSignup">Name</string>
    <string name="emailSignup">Email</string>
    <string name="passwordSignup">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">"Already have an account ? "</string>
    <string name="login">Log in</string>
    <string name="error_email">Invalid Email</string>
    <string name="error_password">Password must be at least 8 characters long, and contain one uppercase letter, one lowercase and one number</string>
    <string name="error_name">Name cannot be empty</string>
    <string name="error_signup">User cannot be created at this time, please try again later</string>
    <string name="welcomeBack">Welcome back!</string>
    <string name="log_in_message">Please <b>login</b> below and resume your spying activities!</string>
    <string name="login_failed">Login Failed, please check your email and password</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="settings">Settings</string>
    <string name="find">Find</string>
    <string name="account">Account</string>
    <string name="alert">Alert</string>
    <string name="camera">Camera</string>
    <string name="data">Data</string>
    <string name="alert_kid_fab_description">Make your phone kid ring</string>
    <string name="welcome_user">"Welcome "</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="change_password">Change password</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connected_devices">Connected devices</string>
    <string name="please_select_a_device">Please select a device</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="Annuler">Annuler</string>
    <string name="Ok">Ok</string>
    <string name="newZone">Nouvelle area</string>
    <string name="areaInfoTitle">Information de la zone</string>
    <string name="Modifier">Modifier</string>
    <string name="Zone">Zone</string>
    <string name="areaNameTitle">Nom : </string>
    <string name="areaTagTitle">Caractéristique : </string>
    <string name="delete">Supprimer</string>
    <string name="Delete">Supprimer</string>
</resources>