<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <TextView
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/welcomeBack"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/log_in_message"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_signup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailSignup"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_signup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordSignup"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:paddingTop="5dp"
            android:id="@+id/materialButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onLoginClick"
            android:text="@string/login" />

    </LinearLayout>
</ScrollView>